# power_team_scara

./: .gitignore  SCARA control code.sln  git log  s
ROBT 3341 - SCARA/: CMakeLists.txt  Galil.h  gcl_datarecord.cpp  gcl_galil.cpp  gcl_galil.h  gcl_simple.cpp  gclib.h  gclib.lib  gclib_errors.h  gclib_record.h  gclibo.c  gclibo.h  scara.vcxproj  scara.vcxproj.filters  scara_control.c  scara_control.h  scara_interface.c  scara_interface.h  scara_main.c  scara_menu.c  scara_menu.h  tic_generator.h  tic_generator.lib
